review code, add img topic